// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check login layout example against snapshot 1`] = `
<div
  className="pf-c-login"
>
  <div
    className="pf-c-login__container"
  >
    <Component
      headerBrand="HeaderBrand"
    >
      Header Text
    </Component>
    <main
      className="pf-c-login__main"
    >
      Main
    </main>
    <Component>
      Footer
    </Component>
  </div>
</div>
`;

exports[`Login should match snapshot (auto-generated) 1`] = `
<div
  className="pf-c-login ''"
>
  <div
    className="pf-c-login__container"
  >
    <main
      className="pf-c-login__main"
    >
      ReactNode
    </main>
  </div>
</div>
`;
